--- a/shop/src/main/resources/templates/member/memberForm.html
+++ b/shop/src/main/resources/templates/member/memberForm.html
@@ -2,7 +2,7 @@
 <html
   xmlns:th="http://www.thymeleaf.org"
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~(layout/layout1)"
+  layout:decorate="~{layouts/layout1}"
 >
   <!-- 사용자 css 추가 -->
   <th:block layout:fragment="'css">
