--- a/shop/src/main/resources/templates/main.html
+++ b/shop/src/main/resources/templates/main.html
@@ -2,7 +2,7 @@
 <html
   xmlns:th="http://www.thymeleaf.org"
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~(layout/layout1)"
+  layout:decorate="~{layouts/layout1}"
 >
   <div layout:fragment="content">
     <h1>메인 페이지입니다.</h1>
