--- a/shop/src/main/resources/templates/fragments/header.html
+++ b/shop/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
   <div th:fragment="header">
     <div th:fragment="header">
       <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
